change fields